tests/ui/parse_expr.stderr
error: expected expression, found `~`
 --> $DIR/parse_expr.rs:5:19
  |
5 |     json!({ "a" : ~ });
  |                   ^

